# example_rbatis_with_actix_web

./: Cargo.toml  README.md
sql/: user.sql
src/: main.rs
src/common/: mod.rs  util.rs
src/controller/: mod.rs  openapi.rs  user_controller.rs
src/model/: user.rs
