[package]
name = "example_rbatis_with_actix_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_log = { workspace = true }
log = { workspace = true }
rbatis = { workspace = true }
rbdc-mysql = { workspace = true }
rbs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

actix-web = { workspace = true }
error-chain = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lombok = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[workspace]
members = [
    ".",
]
[workspace.dependencies]
fast_log = "1.5.51"
log = "0.4.17"
rbatis = { version = "4.0.44", features = ["upper_case_sql_keyword"] }
rbdc-mysql = "4.1.0"
rbs = "4.1.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"

actix-web = "4.2.1"
error-chain = "0.12.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
lombok = "0.3.3"
utoipa = { version = "3.1.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["actix-web"] }
schemars = "0.8.11"


